--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "edgevest",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "EdgeVest - Trade Advisory Platform",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@heroicons/react": "^2.0.16",
+    "axios": "^1.3.4",
+    "recharts": "^2.5.0",
+    "date-fns": "^2.29.3",
+    "clsx": "^1.2.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9"
   },
   "scripts": {
     "start": "react-scripts start",
