--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "description": "EdgeVest - Trade Advisory Platform",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
+    "axios": "^1.3.4",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
+    "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "@heroicons/react": "^2.0.16",
-    "axios": "^1.3.4",
     "recharts": "^2.5.0",
-    "date-fns": "^2.29.3",
-    "clsx": "^1.2.1"
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9"
+    "tailwindcss": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
