--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "EdgeVest - Trade Advisory Platform",
   "private": true,
+  "homepage": "https://your-github-username.github.io/edgevest",
   "dependencies": {
     "@heroicons/react": "^2.0.16",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +26,8 @@
     "tailwindcss": "^3.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
